--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,4 +16,4 @@ spring.ai.vectorstore.milvus.index-type=ivf_flat
 
 spring.ai.vectorstore.milvus.initialize-schema=true
 
-spring.profiles.active=sk
+spring.profiles.active=mac
