--- a/pom.xml
+++ b/pom.xml
@@ -128,12 +128,6 @@
             <version>5.2.3</version>
         </dependency>
 
-        <!-- 如果需要HTML转换 -->
-        <dependency>
-            <groupId>org.apache.poi</groupId>
-            <artifactId>poi-scratchpad</artifactId>
-            <version>5.2.3</version>
-        </dependency>
         <!-- Word文档处理 -->
         <dependency>
             <groupId>org.apache.poi</groupId>
@@ -141,6 +135,38 @@
             <version>5.2.3</version>
         </dependency>
 
+        <!-- PDF转图像 -->
+        <!-- 图像处理 -->
+        <dependency>
+            <groupId>org.apache.pdfbox</groupId>
+            <artifactId>pdfbox-tools</artifactId>
+            <version>2.0.29</version>
+        </dependency>
+
+         <!-- 如果使用社区版SDK -->
+        <dependency>
+            <groupId>com.github.eljah</groupId>
+            <artifactId>xmindjbehaveplugin</artifactId>
+            <version>0.8</version>
+        </dependency>
+
+        <!-- Excel处理 -->
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+            <version>5.2.3</version>
+        </dependency>
+        <!-- Excel处理 -->
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+            <version>5.2.3</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>5.2.3</version>
+        </dependency>
 
     </dependencies>
     <dependencyManagement>
