--- a/pom.xml
+++ b/pom.xml
@@ -168,6 +168,12 @@
             <version>5.2.3</version>
         </dependency>
 
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.17.0</version>
+        </dependency>
+
     </dependencies>
     <dependencyManagement>
         <dependencies>
