--- a/pom.xml
+++ b/pom.xml
@@ -213,6 +213,22 @@
                     </excludes>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <addClasspath>true</addClasspath>
+                            <classpathPrefix>libs/</classpathPrefix>
+                            <mainClass>
+                                org.egg.docagent.DocAgentApplication
+                            </mainClass>
+                        </manifest>
+                    </archive>
+                    <outputDirectory>./target</outputDirectory>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
