--- a/pom.xml
+++ b/pom.xml
@@ -174,6 +174,12 @@
             <version>2.17.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>io.minio</groupId>
+            <artifactId>minio</artifactId>
+            <version>8.5.13</version>
+        </dependency>
+
     </dependencies>
     <dependencyManagement>
         <dependencies>
