--- a/pom.xml
+++ b/pom.xml
@@ -177,7 +177,21 @@
         <dependency>
             <groupId>io.minio</groupId>
             <artifactId>minio</artifactId>
-            <version>8.5.13</version>
+            <version>8.5.7</version>
+        </dependency>
+
+        <!-- 图片处理依赖 -->
+        <dependency>
+            <groupId>net.coobird</groupId>
+            <artifactId>thumbnailator</artifactId>
+            <version>0.4.19</version>
+        </dependency>
+
+        <!-- 图像处理 (备选方案) -->
+        <dependency>
+            <groupId>org.imgscalr</groupId>
+            <artifactId>imgscalr-lib</artifactId>
+            <version>4.2</version>
         </dependency>
 
     </dependencies>
