对于PPT、PDF、WORD，每页换行

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,6 +16,6 @@ spring.ai.vectorstore.milvus.index-type=ivf_flat
 
 spring.ai.vectorstore.milvus.initialize-schema=true
 
-spring.profiles.active=sk
+spring.profiles.active=mac
 
 match-bound=0.2
