改造成多线程

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,6 +16,8 @@ spring.ai.vectorstore.milvus.index-type=ivf_flat
 
 spring.ai.vectorstore.milvus.initialize-schema=true
 
-spring.profiles.active=mac
+spring.profiles.active=sk
 
 match-bound=0.2
+
+parallel-num=2
