使用m3e作为分词器

--- a/pom.xml
+++ b/pom.xml
@@ -201,6 +201,12 @@
             <version>1.0.0.4</version>
         </dependency>
 
+        <!-- ollama -->
+       <dependency>
+           <groupId>org.springframework.ai</groupId>
+           <artifactId>spring-ai-starter-model-ollama</artifactId>
+        </dependency>
+
     </dependencies>
     <dependencyManagement>
         <dependencies>
